--- a/backend/package.json
+++ b/backend/package.json
@@ -17,9 +17,12 @@
     "@types/cors": "^2.8.17",
     "@types/dotenv": "^8.2.3",
     "@types/express": "^5.0.0",
+    "@types/express-session": "^1.18.1",
     "@types/mysql": "^2.15.26",
+    "@types/passport-google-oauth20": "^2.0.16",
     "@types/sequelize": "^4.28.20",
     "nodemon": "^3.1.9",
+    "passport": "^0.7.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
   },
@@ -29,7 +32,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "mysql2": "^3.13.0",
+    "passport-google-oauth20": "^2.0.0",
     "sequelize": "^6.37.6",
     "tsconfig-paths": "^4.2.0"
   }
