--- a/e-comm-client/package.json
+++ b/e-comm-client/package.json
@@ -13,8 +13,7 @@
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-i18n": "11.1.0",
-    "vue-router": "^4.0.3",
-    "vuex": "^4.0.0"
+    "vue-router": "^4.0.3"
   },
   "devDependencies": {
     "@types/axios": "^0.14.4",
@@ -35,6 +34,7 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "jest": "^27.0.5",
+    "pinia": "^3.0.2",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
     "ts-jest": "^27.0.4",
