--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "typescript": "^5.8.2"
   },
   "dependencies": {
+    "@types/stripe": "^8.0.417",
     "body-parser": "^1.20.3",
     "compression": "^1.8.0",
     "cors": "^2.8.5",
@@ -36,6 +37,7 @@
     "mysql2": "^3.13.0",
     "passport-google-oauth20": "^2.0.0",
     "sequelize": "^6.37.6",
+    "stripe": "^18.0.0",
     "tsconfig-paths": "^4.2.0"
   }
 }
